--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ezchat",
   "version": "1.0.0",
   "description": "A simple chat application  [node, express, socket.io]",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
